--- a/nextflow.config
+++ b/nextflow.config
@@ -4,6 +4,11 @@ process {
         container = 'p2rank_pipeline:latest'
     }
 }
+process {
+    withName: P2RANKALPHA {
+        container = 'p2rank_pipeline:latest'
+    }
+}
 
 docker {
     enabled = true
