--- a/nextflow.config
+++ b/nextflow.config
@@ -4,11 +4,26 @@ process {
         container = 'p2rank_pipeline:latest'
     }
 }
+
 process {
     withName: P2RANKALPHA {
         container = 'p2rank_pipeline:latest'
     }
 }
+
+
+process {
+    withName: P2RANKDS {
+        container = 'p2rank_pipeline:latest'
+    }
+}
+
+process {
+    withName: FPOCKET {
+        container = 'community.wave.seqera.io/library/fpocket:cad6551c1e2f60d8'
+    }
+}
+
 
 docker {
     enabled = true
