--- a/nextflow.config
+++ b/nextflow.config
@@ -1,20 +1,20 @@
 
 process {
     withName: P2RANK {
-        container = 'p2rank_pipeline:latest'
+        container = 'drfrederickmappin/p2rank:latest'
     }
 }
 
 process {
     withName: P2RANKALPHA {
-        container = 'p2rank_pipeline:latest'
+        container = 'drfrederickmappin/p2rank:latest'
     }
 }
 
 
 process {
     withName: P2RANKDS {
-        container = 'p2rank_pipeline:latest'
+        container = 'drfrederickmappin/p2rank:latest'
     }
 }
 
